services/teup/website/05-ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: teup-website-https
  namespace: teup-website
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`teup.pt`) || Host(`www.teup.pt`) || Host(`teup.niaefeup.pt`)
      kind: Rule
      services:
        - name: teup-website-service
          port: 80
  tls:
    secretName: teup-website-cert
